--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,27 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: terraform
+version: master
+summary: build, change, and version infrastructure safely and efficiently
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  Terraform is a tool for building, changing, and versioning infrastructure
+  safely and efficiently. Terraform can manage existing and popular service
+  providers as well as custom in-house solutions.
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+grade: devel
+confinement: strict
+
+apps:
+  terraform:
+    command: terraform
+    plugs: [home, network, network-bind]
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  terraform:
+    source: https://github.com/hashicorp/terraform.git
+    source-tag: master
+    plugin: go
+    go-importpath: github.com/hashicorp/terraform
+    go-packages: [github.com/hashicorp/terraform]
+    go-buildtags: [core]
+    after: [go]
+  go:
+    source-tag: go1.9
