--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,5 @@
 name: terraform
+base: core18
 version: master
 summary: build, change, and version infrastructure safely and efficiently
 description: |
