Set grade to stable

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,7 +7,7 @@ description: |
   safely and efficiently. Terraform can manage existing and popular service
   providers as well as custom in-house solutions.
 
-grade: devel
+grade: stable
 confinement: strict
 
 apps:
